# jpeg_viewer

./: README.md  pyproject.toml
jpeg_viewer/: cli.py
